.NET Framework 4.5 でビルドできるように参照設定を変更

--- a/WCFMemberServiceGUI/App.config
+++ b/WCFMemberServiceGUI/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
     <system.serviceModel>
         <behaviors>
@@ -10,13 +10,11 @@
         </behaviors>
         <services>
             <service behaviorConfiguration="NewBehavior" name="WCFMemberServiceLibrary.SampleService">
-                <clear />
-                <endpoint address="http://localhost:8080/MemberService" binding="basicHttpBinding"
-                    contract="WCFMemberServiceLibrary.ISampleService" listenUriMode="Explicit">
+                <clear/>
+                <endpoint address="http://localhost:8080/MemberService" binding="basicHttpBinding" contract="WCFMemberServiceLibrary.ISampleService" listenUriMode="Explicit">
                 </endpoint>
-                <endpoint address="net.tcp://localhost:8081/MemberService" binding="netTcpBinding"
-                    bindingConfiguration="" contract="WCFMemberServiceLibrary.ISampleService" />
+                <endpoint address="net.tcp://localhost:8081/MemberService" binding="netTcpBinding" bindingConfiguration="" contract="WCFMemberServiceLibrary.ISampleService"/>
             </service>
         </services>
     </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
