--- a/WCFSampleClient/WCFSampleClient.csproj
+++ b/WCFSampleClient/WCFSampleClient.csproj
@@ -62,7 +62,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleService.cs" />
     <Compile Include="Service References\localhost.cs">
       <DependentUpon>localhost.map</DependentUpon>
     </Compile>
@@ -82,6 +81,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WCFMemberServiceLibrary\WCFMemberServiceLibrary.csproj">
+      <Project>{3edac4c7-55eb-470e-9932-bc0d2d340d78}</Project>
+      <Name>WCFMemberServiceLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
